remove overflow on html element, fix bill bio grid spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,8 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    width: 100%;
   }
   
 body {
